@@ -5,10 +5,11 @@ development home at https://github.com/projectestac/agora_nodes
 
 Changes in progress
 ---------------------------------------------------------------------------------------
-- Role names translated in import-users-with-csv (Trello #625)
 - Forbidden access to admin-tools and edit-comments for Collaborator user roles (Trello #790)
 - Don't allow admins to modify WordPress URL on wp-admin/options-general.php (Trello #797)
-
+- Role names translated in import-users-with-csv (Trello #625)
+- Widget Grup-classe: Add navigation buttons to calendar (Github #182)
+- Widget Grup-classe: Internationalization (Github #88)
 
 
 Changes 15.05.19
